# arbor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py  vragen
arbor/: CMakeLists.txt  cell_group_factory.cpp  cell_group_factory.hpp  common_types_io.cpp  fvm_layout.cpp  fvm_layout.hpp  fvm_lowered_cell.hpp  fvm_lowered_cell_impl.hpp  fvm_lowered_distributed_cell_impl.cpp  fvm_lowered_distributed_cell_impl.hpp  label_resolution.cpp  matrix.hpp  mc_cell_group.cpp  mc_cell_group_distributed.cpp  mc_cell_group_distributed.hpp  mechinfo.cpp  partition_load_balance.cpp  simulation.cpp
example/: CMakeLists.txt  noise_correlation.py
example/IO_EMC/: CMakeLists.txt  IO_EMC.cpp
example/IOmax/: CMakeLists.txt  IOmax.cpp  elias.py  glomerulus.c  glomerulus.h
example/IOmax/mechanisms/: Local_catalogue.cpp  smolLocal_catalogue.cpp
example/IOmax/mechanisms/LocalMechs/: ou_noise.cpp  ou_noise.hpp
example/IOmax/mechanisms/smolLocal/: ca_conc.hpp  ca_conc_cpu.cpp
example/gap_junctions/: gap_junctions.cpp
example/gap_junctions_distributed/: CMakeLists.txt  gap_junctions_distibuted.cpp  readme.md
mechanisms/: BuildModules.cmake  CMakeLists.txt
mechanisms/EMC/: CMakeLists.txt  EMC_catalogue.cpp
mechanisms/new_default/: CMakeLists.txt  new_default_catalogue.cpp
mechanisms/smol/: ca_conc.mod  calpid.mod  cx36.mod
mechanisms_custom/: CMakeLists.txt  IOU_catalogue.cpp  Readme.txt
mechanisms_custom/IOU_Mechs/: adex.hpp  adex_cpu.cpp  compile_commands.json  (+28 more)
python/: mechanism.cpp  recipe.cpp  recipe.hpp  simulation.cpp
scripts/: build-catalogue.in
(+112 files in other folders)
